--- a/kubernetes-demo/tasks/02_deployment.yaml
+++ b/kubernetes-demo/tasks/02_deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: k8s.gcr.io/nginx-slim:0.7
+        image: registry.k8s.io/nginx-slim:0.7
         ports:
         - containerPort: 80
         resources:
